overflow bug

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,8 @@ body {
 }
 
 section{
+  overflow-x: hidden;
+  max-width: 100vw;
   margin-bottom: .3em;
 }
 
